# RVH-AutomatedDataAnalysis

./: .flake8  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci_pipeline.yml
data/: example.csv
projects/example/: README.md  example_analysis.py  example_statistical_analysis.xlsx  example_statistics.xlsx  forest_comparison_results.txt  forest_model_comparison.py
src/: __init__.py  data_preprocessing.py  data_visualizer.py  data_wrangling.py  exploratory_data_analysis.py  exploratory_data_review.py  model_forest.py  statistical_methods.py  time_series_forecasting.py
tests/: test_data_visualizer.py  test_integration.py  test_model_forest.py  test_statistical_methods.py  test_time_series_forecasting.py
